--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -31,6 +31,8 @@
       </div>
     </div>
 
+	 <button class="btn" type="button">Reset</button>
+
     <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
